# monorepo

./: .gitignore  LICENSE  README.md  commitlint.config.js  package-lock.json  package.json  pnpm-lock.yaml
.husky/: commit-msg
apps/web/: .env.example  package.json
apps/web/src/app/: error.tsx  layout.tsx  loading.tsx  manifest.ts  metadata.ts  not-found.tsx  page.tsx  robots.ts  sitemap.ts
apps/web/src/components/: CustomLayout.tsx  Dialog.tsx  Features.tsx  Footer.tsx  Header.tsx  Hero.tsx  HowItWorks.tsx  ImageWithFallback.tsx  MobileAndTabletScreen.tsx  UseCases.tsx
apps/web/src/constants/: blockchains.ts  placeholders.ts
apps/web/src/lib/: envVariables.ts
apps/website/: package.json
contracts/base/: remappings.txt
contracts/ethereum/: .gitignore  foundry.toml
contracts/ethereum/script/: Deploy.s.sol  DeployTokensForTesting.s.sol  deployment.sh  deploytokens.sh  test.js
contracts/ethereum/src/: Buffcat.sol  IBuffcat.sol  IDerivativeToken.sol  Twoside.sol
contracts/ethereum/test/: Fee.t.sol  Lock.t.sol  TestSetUp.sol  Token.sol  Unlock.t.sol
contracts/solana/: Anchor.toml  package-lock.json  package.json  tsconfig.json
contracts/solana/programs/solana/: Cargo.toml
contracts/solana/programs/solana/src/: lib.rs
contracts/solana/scripts/: createAtas.ts  createMetadata.ts  deployForTesting.ts  getAccounts.ts  initializeProgram.ts  lockTokens.ts  programSetup.ts  setup.ts  unlockTokens.ts
contracts/solana/tests/: initialize.ts  lock.ts  setup.ts  setup2.ts  unlock.ts
programs/solana/: Anchor.toml  package-lock.json
(+40 files in other folders)
